tests/negative/parser/unreachable_match.orng
// unreachable_match.orng:7:20: error: expected an expression here, got `unreachable`
//         unreachable => 35
//                   ^
// 
fn main() -> Int {
    match 4 {
        unreachable => 35
        _ => 2
    }
}